fixed all the logos and the overflow!

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,28 +1,77 @@
-@media screen and (max-width: 1023px) {
-    .footer {
-      display: flex;
-      justify-content: end;
-    }
-  
+@media screen and (min-width: 1024px) {
+
     .hire-us-section {
-      display: flex;
-      flex-direction: column;
-    }
-  
-    .hire-us-left {
       display: flex;
       flex-direction: row;
     }
   
-    .plan-features-list {
+    .hire-us-left {
       display: flex;
       flex-direction: column;
+    }
+  
+    .plan-features-list {
+      display: flex;
+      flex-direction: row;
       align-items: center;
     }
   
     .right-column {
       display: flex;
       justify-content: center;
+    }
+  }
+
+  @media screen and (min-width:768px) and (max-width:1023px){
+    .why-front-title{
+      margin-top: 400px;
+    }
+    .google{
+      top: 40%;
+      left: 10%;
+    }
+    .paypal{
+      top: 40%;
+      left: 18%;
+    }
+    .atlassian{
+      top: 50%;
+      left: 25%;
+    }
+    .google-ads{
+    top: 43%;
+    left: 33%;
+    }
+    .weave{
+      top: 60%;
+      left: 40%;
+    }
+    .asana{
+      top: 65%;
+      left: 55%;
+    }
+    .calender{
+      top: 70%;
+      left: 70%;
+    }
+
+    .hire-us-section{
+      display: flex;
+      flex-direction: column;
+    }
+
+    .hire-us-right{
+      width: 80%;
+    }
+
+    .nav-bar i{
+      visibility: visible;
+    }
+
+    .footer{
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: end;
     }
   }
   
@@ -119,11 +168,11 @@
     }
     .paypal {
       top: 70%;
-      left: 15%;
+      left: 10%;
     }
     .google-ads {
-      top: 90%;
-      left: 32%;
+      top: 92%;
+      left: 22%;
     }
     .atlassian {
       top: 60%;
@@ -131,15 +180,15 @@
     }
     .weave {
       top: 80%;
-      left: 50%;
+      left: 40%;
     }
     .asana {
-      top: 90%;
-      left: 72%;
+      top: 95%;
+      left: 62%;
     }
     .calender {
       top: 70%;
-      left: 72%;
+      left: 70%;
     }
   
     .hire-top{
@@ -148,6 +197,11 @@
   
     .hire-bottom{
       margin-left: 0;
+    }
+
+    .hire-us-section{
+      display: flex;
+      flex-direction: column;
     }
   
     .hire-us-left {
@@ -206,5 +260,13 @@
       flex-direction: row;
       gap: 50px;
     }
+
+    .plan-features-list{
+      display: flex;
+      flex-direction: column;
+    }
+
+    body{
+    overflow-x: hidden;
+    }
   }
-  
